tests/rosetta/out/Java/csv-to-html-translation-1.error
javac error: exit status 1
/tmp/TestMochiToJavacsv-to-html-translation-1632773642/001/CsvToHtmlTranslation1.java:12: error: incompatible types: String cannot be converted to int
    int c = "Character,Speech\n" + "The multitude,The messiah! Show us the messiah!\n" + "Brians mother,<angry>Now you listen here! He's not the messiah; he's a very naughty boy! Now go away!</angry>\n" + "The multitude,Who are you?\n" + "Brians mother,I'm his mother; that's who!\n" + "The multitude,Behold his mother! Behold his mother!";
            ^
/tmp/TestMochiToJavacsv-to-html-translation-1632773642/001/CsvToHtmlTranslation1.java:14: error: cannot find symbol
    for (Number line : split(c, "\n")) {
                       ^
  symbol:   method split(int,String)
  location: class CsvToHtmlTranslation1
/tmp/TestMochiToJavacsv-to-html-translation-1632773642/001/CsvToHtmlTranslation1.java:15: error: cannot find symbol
        rows.add(split(line, ","));
                 ^
  symbol:   method split(Number,String)
  location: class CsvToHtmlTranslation1
3 errors
